2008-03-24  Richard B. Kreckel  <kreckel@ginac.de>

	* Version 1.2.1 released.

2008-03-23  Bruno Haible  <bruno@clisp.org>

	* autogen.sh: New file.
	* Makefile.devel (build-prerequisites): New target.
	(all): Depend on it.
	(EXCLUDE): Also exclude autogen.sh.

2008-03-23  Bruno Haible  <bruno@clisp.org>

	Make "make -jN" work again, broken on 2008-02-23.
	* src/Makefile.in (ALLOBJECTS_LO): Fix dependency.

2008-03-15  Richard B. Kreckel  <kreckel@ginac.de>

	* m4/gmp.m4 (CL_LIBGMP): New macro brings support for --with-gmp=DIR...
	* configure.ac: ...used here.
	* doc/cln.texi: Document that new feature.
	Suggested by Paul Zimmermann <paul.zimmermann@loria.fr>.

2008-02-23  Bruno Haible  <bruno@clisp.org>

	Support for gcc-4.3 snapshots.
	* autoconf/floatparam.c (check): Change argument types to
	'volatile type*'. This defeats optimizations of gcc 4.3.0 snapshots.

2008-02-23  Bruno Haible  <bruno@clisp.org>

	Change "make alls" and "make allo" to recurse into subdirectories.
	* src/Makefile.in (alls-local): Renamed from alls.
	(allo-local): Renamed from allo.
	(SUBDIRS_TARGET_ALL): Renamed from SUBDIRS_TARGET.
	(alls, allo): New rules.
	(SUBDIRS_TARGET_ALLS, SUBDIRS_TARGET_ALLO): New variables.

2008-02-22  Richard B. Kreckel  <kreckel@ginac.de>

	* include/cln/integer_io.h (read_integer): Make index args uintC.
	* src/integer/input/cl_I_readparsed.cc: Likewise.
	* include/cln/rational_io.h (read_rational): Likewise.
	* src/rational/input/cl_RA_readparsed.cc: Likewise
	* include/cln/float_io.h (read_float): Likewise.
	* src/float/input/cl_F_readparsed.cc: Likewise.
	* src/vector/output/cl_GV_number_aprint.cc: Vector lengths are uintC.
	* src/vector/output/cl_SV_aprint.cc: Likewise.
	* src/vector/output/cl_SV_number_aprint.cc: Likewise.

2008-02-15  Richard B. Kreckel  <kreckel@ginac.de>

	* m4/cc.m4 (CL_HAVE_ATTRIBUTE_FLATTEN): More robust definition allows...
	* src/base/cl_maybe_inline.h (CL_FLATTEN): ...simplification here.
